Constrain packaging dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires =
     ipython~=7.0
     jsonref~=0.2
     jsonschema[format]~=3.2
-    packaging>=20.1
+    packaging>=20.1,<22.0
     requests~=2.27
     requests-cache~=0.5
     requests-mock~=1.8
@@ -41,7 +41,7 @@ install_requires =
     toml~=0.10
     traitlets~=5.0
     urllib3~=1.24
-    watchdog~=0.10
+    watchdog~=2.1
 python_requires = >=3.7
 include_package_data = True
 zip_safe = False
