--- a/tests/static/app_with_setupcfg/setup.cfg
+++ b/tests/static/app_with_setupcfg/setup.cfg
@@ -10,7 +10,11 @@ version = 0.1.1
 author = AiiDAlab team
 description = ISPG applications in AiiDALab
 
+# Only define python requirements that are by definition
+# already present. We also make one requirement invalid
+# to test that we do not crash in that case.
 [options]
 python_requires = >=3.9
 install_requires =
     pip
+    pytest # This comment makes this requirement invalid
