--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ install_requires =
     click>=7.0,<9
     click-spinner~=0.1
     dulwich~=0.20
-    packaging>=20.1,<22
+    packaging>=20.1
     pip
     requests~=2.27
     requests-cache~=1.0
