Fix failing test

--- a/tests/static/app_with_setupcfg/setup.cfg
+++ b/tests/static/app_with_setupcfg/setup.cfg
@@ -8,7 +8,7 @@ categories = quantum
 name = hello-world
 version = 0.1.1
 author = AiiDAlab team
-description = ISPG applications in AiiDALab
+description = Testing hello world
 
 # Only define python requirements that are by definition
 # already present. We also make one requirement invalid
