WIP: Don't ignore missing imports

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,7 +74,7 @@ docs =
 
 [mypy]
 strict = True
-ignore_missing_imports = True
+ignore_missing_imports = False
 strict_optional = True
 show_error_codes = True
 
